force-app/main/default/objects/Case/fields/CAZ_AbonoEncontrado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_AbonoEncontrado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se encontró el abono en JD Edwards</description>
    <label>Abono Encontrado</label>
    <type>Checkbox</type>
</CustomField>