force-app/main/default/objects/Case/fields/CAZ_BucketActual__c.field-meta.xml
<CustomField>
    <fullName>CAZ_BucketActual__c</fullName>
    <description>Nivel de riesgo de cobranza actual de este caso.</description>
    <label>Bucket Actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Naranja</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Al Corriente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>