force-app/main/default/objects/Case/fields/CAZ_ClaveDistribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ClaveDistribuidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Clave de Distribuidor para aclaración de pagos</description>
    <label>Clave de Distribuidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Clave de Distribuidor)</relationshipLabel>
    <relationshipName>CasosDistribuidor</relationshipName>
    <type>Lookup</type>
</CustomField>