force-app/main/default/objects/Case/fields/CAZ_ComprobantePago__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ComprobantePago__c</fullName>
    <description>Comprobante de Pago (URL)</description>
    <label>Comprobante de Pago</label>
    <type>Url</type>
</CustomField>