force-app/main/default/objects/Case/fields/CAZ_DeudaTotal__c.field-meta.xml
<CustomField>
    <fullName>CAZ_DeudaTotal__c</fullName>
    <description>Monto total de la deuda al momento de gestionar la cobranza.</description>
    <label>Deuda Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>