force-app/main/default/objects/Case/fields/CAZ_DiasCredito__c.field-meta.xml
<CustomField>
    <fullName>CAZ_DiasCredito__c</fullName>
    <description>Días de crédito solicitados por el distribuidor.</description>
    <label>Días de Crédito Solicitados</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>