force-app/main/default/objects/Case/fields/CAZ_DocumentosCompletos__c.field-meta.xml
<CustomField>
    <fullName>CAZ_DocumentosCompletos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el distribuidor cargó todos los documentos obligatorios (Acta Constitutiva, Identificación, Estados de Cuenta). El flujo no avanza a En Revisión si este campo es falso.</description>
    <label>Documentos Completos</label>
    <type>Checkbox</type>
</CustomField>