force-app/main/default/objects/Case/fields/CAZ_FechaEnvioTesoreria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaEnvioTesoreria__c</fullName>
    <label>Fecha Envío a Tesorería</label>
    <type>DateTime</type>
</CustomField>