force-app/main/default/objects/Case/fields/CAZ_FechaLimiteJuridico__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaLimiteJuridico__c</fullName>
    <description>Fecha y hora límite para que Jurídico complete la documentación (SLA 72 horas).</description>
    <label>Fecha Límite Jurídico</label>
    <type>DateTime</type>
</CustomField>