force-app/main/default/objects/Case/fields/CAZ_FechaPago__c.field-meta.xml
<CustomField>
    <fullName>CAZ_FechaPago__c</fullName>
    <description>Fecha de Pago</description>
    <label>Fecha de Pago</label>
    <type>Date</type>
</CustomField>