force-app/main/default/objects/Case/fields/CAZ_MontoPagado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MontoPagado__c</fullName>
    <description>Monto Pagado a aclarar</description>
    <label>Monto Pagado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>