force-app/main/default/objects/Case/fields/CAZ_MontoSolicitado__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MontoSolicitado__c</fullName>
    <description>Monto solicitado por el distribuidor en el requerimiento de ampliación de crédito.</description>
    <label>Monto Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>