force-app/main/default/objects/Case/fields/CAZ_MotivoAclaracion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoAclaracion__c</fullName>
    <description>Motivo de la aclaración de pago</description>
    <label>Motivo de Aclaración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pago duplicado</fullName>
            </value>
            <value>
                <fullName>No se ve reflejado en el portal</fullName>
            </value>
            <value>
                <fullName>Error en la referencia</fullName>
            </value>
            <value>
                <fullName>Error en pago de convenio</fullName>
            </value>
            <value>
                <fullName>Error en clave de distribuidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>