force-app/main/default/objects/Case/fields/CAZ_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_MotivoRechazo__c</fullName>
    <label>Motivo de Rechazo</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>