force-app/main/default/objects/Case/fields/CAZ_NumeroCuentaBancaria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroCuentaBancaria__c</fullName>
    <label>Número de Cuenta Bancaria</label>
    <type>Text</type>
    <length>50</length>
</CustomField>