force-app/main/default/objects/Case/fields/CAZ_NumeroFactura__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroFactura__c</fullName>
    <description>Número de Factura o Anticipo</description>
    <label>Número de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>