force-app/main/default/objects/Case/fields/CAZ_NumeroProvisionJDE__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NumeroProvisionJDE__c</fullName>
    <label>Número de Provisión JDE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>