force-app/main/default/objects/Case/fields/CAZ_ReferenciaBancaria__c.field-meta.xml
<CustomField>
    <fullName>CAZ_ReferenciaBancaria__c</fullName>
    <description>Referencia Bancaria</description>
    <label>Referencia Bancaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>