force-app/main/default/objects/Case/fields/CAZ_RFC__c.field-meta.xml
<CustomField>
    <fullName>CAZ_RFC__c</fullName>
    <description>RFC del distribuidor que realiza la solicitud de crédito.</description>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>