force-app/main/default/objects/Case/recordTypes/AclaracionPagos.recordType-meta.xml
<RecordType>
    <fullName>AclaracionPagos</fullName>
    <active>true</active>
    <businessProcess>AclaracionPagos</businessProcess>
    <description>Tipo de registro para la Aclaración de Pagos de distribuidores</description>
    <label>Aclaración de Pagos</label>
</RecordType>