force-app/main/default/objects/Case/recordTypes/AmpliacionCredito.recordType-meta.xml
<RecordType>
    <fullName>AmpliacionCredito</fullName>
    <active>true</active>
    <businessProcess>Aplicacion Credito</businessProcess>
    <description>Solicitudes de ampliación de credito generadas desde el portal</description>
    <label>Ampliacion Credito</label>
</RecordType>