force-app/main/default/objects/Case/recordTypes/CAZ_CobranzaNegociacion.recordType-meta.xml
<RecordType>
    <fullName>CAZ_CobranzaNegociacion</fullName>
    <active>true</active>
    <businessProcess>CAZ_Cobranza</businessProcess>
    <description>Tipo de registro para el proceso de Cobranza y Negociación (CC3)</description>
    <label>Cobranza y Negociación</label>
</RecordType>