force-app/main/default/objects/Case/recordTypes/CAZ_SolicitudAmpliacionCredito.recordType-meta.xml
<RecordType>
    <fullName>CAZ_SolicitudAmpliacionCredito</fullName>
    <active>true</active>
    <businessProcess>Devolucion</businessProcess>
    <label>Solicitud Ampliacion Credito</label>
</RecordType>