force-app/main/default/objects/Case/recordTypes/Devolucion.recordType-meta.xml
<RecordType>
    <fullName>Devolucion</fullName>
    <active>true</active>
    <businessProcess>Devolucion</businessProcess>
    <description>Se utiliza para gestionar y aprobar las solicitudes de devolución de los distribuidores.</description>
    <label>Devolución</label>
</RecordType>