force-app/main/default/objects/Case/recordTypes/SolicitudCredito.recordType-meta.xml
<RecordType>
    <fullName>SolicitudCredito</fullName>
    <active>true</active>
    <businessProcess>Aplicacion Credito</businessProcess>
    <description>Solicitudes de ampliación de credito generadas desde el portal</description>
    <label>Solicitud Credito</label>
</RecordType>