force-app/main/default/objects/Case/listViews/CAZ_Devoluciones_Nuevas.listView-meta.xml
<ListView>
    <fullName>CAZ_Devoluciones_Nuevas</fullName>
    <filterScope>Queue</filterScope>
    <queue>CreditoCobranza</queue>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Borrador</value>
    </filters>
    <label>Devoluciones - Nuevas</label>    <sharedTo>
        <group>CAZ_CreditoCobranza</group>
    </sharedTo>
</ListView>