force-app/main/default/objects/Case/listViews/CAZ_Devoluciones_Pendientes_Tesoreria.listView-meta.xml
<ListView>
    <fullName>CAZ_Devoluciones_Pendientes_Tesoreria</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Por atender</value>
    </filters>
    <label>Devoluciones - Pendientes Tesorería</label>    <sharedTo>
        <group>CAZ_CreditoCobranza</group>
    </sharedTo>
</ListView>