force-app/main/default/objects/Case/listViews/CAZ_Distribuidor_Devoluciones.listView-meta.xml
<ListView>
    <fullName>CAZ_Distribuidor_Devoluciones</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Devoluciones</label>
    <queue>CreditoCobranza</queue>
    <sharedTo>
        <group>CAZ_Distribuidores</group>
    </sharedTo>
</ListView>