force-app/main/default/objects/Case/listViews/CAZ_Mis_Devoluciones_Asignadas.listView-meta.xml
<ListView>
    <fullName>CAZ_Mis_Devoluciones_Asignadas</fullName>
    <filterScope>Mine</filterScope>
    <label>Mis Devoluciones Asignadas</label>
    <sharedTo>
        <group>CAZ_CreditoCobranza</group>
    </sharedTo>
</ListView>