force-app/main/default/objects/Case/listViews/CAZ_Tesoreria_En_Proceso.listView-meta.xml
<ListView>
    <fullName>CAZ_Tesoreria_En_Proceso</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>En Proceso</value>
    </filters>
    <label>Devoluciones - En Proceso</label>    <sharedTo>
        <group>CAZ_Tesoreria</group>
    </sharedTo>
</ListView>