force-app/main/default/objects/Case/listViews/CAZ_Tesoreria_Por_Atender.listView-meta.xml
<ListView>
    <fullName>CAZ_Tesoreria_Por_Atender</fullName>
    <filterScope>Queue</filterScope>
    <queue>Tesoreria</queue>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Por atender</value>
    </filters>
    <label>Devoluciones - Por atender</label>    <sharedTo>
        <group>CAZ_Tesoreria</group>
    </sharedTo>
</ListView>