force-app/main/default/objects/Case/listViews/CreditoCobranza_Case.listView-meta.xml
<ListView>
    <fullName>CreditoCobranza_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Crédito y Cobranza</label>
    <queue>CreditoCobranza</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>