force-app/main/default/objects/Case/listViews/SolitudesDeCredito.listView-meta.xml
<ListView>
    <fullName>SolitudesDeCredito</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CAZ_DiasCredito__c</columns>
    <columns>CAZ_MontoSolicitado__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.SolicitudCredito</value>
    </filters>
    <label>Solitudes de crédito</label>
    <sharedTo>
        <roleAndSubordinates>CAZ_UsuarioDistribuidor</roleAndSubordinates>
    </sharedTo>
</ListView>