force-app/main/default/objects/Case/listViews/Tesoreria_Case.listView-meta.xml
<ListView>
    <fullName>Tesoreria_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Tesorería</label>
    <queue>Tesoreria</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>